# summit_surveyor_3

./: .gitmodules  Cargo.toml
assets/: trail_material.wgsl
game_plugin/: Cargo.toml
game_plugin/src/: actions.rs  audio.rs  camera.rs  input.rs  lib.rs  loading.rs  player.rs  terrain.rs
game_plugin/src/terrain/: layers.rs  skiier.rs
game_plugin/src/terrain/layers/: trails.rs  trails_shader.rs
game_plugin/src/terrain/skiier/: decision.rs
slana/: Cargo.toml
slana/src/: cost_impl.rs  importer.rs  lib.rs
