[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "game_plugin/default",
    # temp fix to allow ide's to check project
    "native"
]

native = [
#    "bevy/bevy_wgpu",
    "game_plugin/native"
]


dev = [
    "bevy/dynamic",
    "native",
]

[dependencies]
bevy = { version = "0.6"}
game_plugin = { path = "game_plugin" }
winit = "0.24.0"

[build-dependencies]
embed-resource = "1.4"
